<resources>
    <string name="app_name">Money Manager</string>
    <string name="chart">Chart</string>
    <string name="transactions">Transactions</string>
    <string name="accounts">Accounts</string>
    <string name="converter">Converter</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="add">Add</string>
    <string name="add_transaction">Add transaction</string>
    <string name="select_date">Select date</string>
    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="apply">Apply</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="account_actions">Account actions</string>
    <string name="editing">Editing</string>
    <string name="adding">Adding</string>
    <string name="year">Year</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="all_time">All time</string>
    <string name="from_account">From account</string>
    <string name="to_category">To category</string>
    <string name="expense">Expense</string>
    <string name="note">Note</string>
    <string name="select_an_account">Select an account</string>
    <string name="accounts_filter">Accounts filter</string>
    <string name="all_accounts">All accounts</string>
    <string name="color_filter">Color filter</string>
    <string name="selected_color">Selected color:</string>
    <string name="theme">Theme</string>
    <string name="displayed_currency">Displayed currency</string>
    <string name="settings">Settings</string>
    <string name="no_transaction">No transaction</string>
    <string name="add_transaction_button">Add transaction button</string>
    <string name="convert">Convert</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="enter_the_pin">Enter the PIN</string>
    <string name="set_the_pin">Set the PIN</string>
    <string name="repeat_the_pin">Repeat the PIN</string>
    <string name="forgot_code">Forgot PIN?</string>

    <string name="account_empty_name_error">The field with the account name is empty</string>
    <string name="enter_amount_error">The amount is entered incorrectly or not entered at all</string>
    <string name="connection_error">Check your internet connection</string>
    <string name="delete_alert_title">Do you really want to delete this account?</string>
    <string name="delete_alert_subtitle">All transactions from this account will also be deleted.</string>
    <string name="alert_transaction_title">Do you really want to delete this transaction?</string>
    <string name="enter_expense_error">The expense is entered incorrectly or not entered at all</string>
    <string name="forgot_alert_title">Forgot your password?</string>
    <string name="forgot_alert_message">You can restore access to the application only by erasing all data.</string>
    <string name="erase_data_alert_title">Erase application data?</string>
    <string name="erase_data_alert_message">Are you sure you want to do this? It will be impossible to restore the data. After deleting, the application will be closed.</string>
    <string name="reset_pin_message">Click twice to reset the PIN and set a new one</string>
    <string name="reset_pin_message_repeat">Click to reset the PIN and set a new one</string>
</resources>