<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape"
    tools:context=".feature.presentation.ui.transactions.date.SelectDateDialogFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/select_date"
        style="@style/CardViewWithTopCorners"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/DateDialogItemStyle"
            android:text="@string/select_date"
            app:drawableStartCompat="@drawable/ic_date_range" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/today"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_date">

        <TextView
            style="@style/DateDialogItemStyle"
            android:text="@string/today"
            app:drawableStartCompat="@drawable/ic_today" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/week"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@id/today"
        app:layout_constraintTop_toBottomOf="@id/select_date">

        <TextView
            style="@style/DateDialogItemStyle"
            android:text="@string/week"
            app:drawableStartCompat="@drawable/ic_week" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/month"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/today">

        <TextView
            style="@style/DateDialogItemStyle"
            android:text="@string/month"
            app:drawableStartCompat="@drawable/ic_month" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/year"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@+id/month"
        app:layout_constraintTop_toBottomOf="@id/week">

        <TextView
            style="@style/DateDialogItemStyle"
            android:text="@string/year"
            app:drawableStartCompat="@drawable/ic_year" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/all_time"
        style="@style/CardViewWithBottomCorners"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year">

        <TextView
            style="@style/DateDialogItemStyle"
            android:text="@string/all_time"
            app:drawableStartCompat="@drawable/ic_infinity" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>