<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.presentation.ui.converter.CurrencyConverterFragment">

    <Spinner
        android:id="@+id/from_currency"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="9dp"
        android:entries="@array/currency_values"
        app:layout_constraintBottom_toBottomOf="@+id/amount_text_field"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/amount_text_field"
        app:layout_constraintTop_toTopOf="@+id/amount_text_field" />

    <Spinner
        android:id="@+id/to_currency"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:entries="@array/currency_values"
        app:layout_constraintBottom_toBottomOf="@+id/result_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/result_text"
        app:layout_constraintTop_toTopOf="@+id/result_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="180dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_text_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_top">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="12" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="200dp"
        android:padding="16dp"
        android:textSize="18sp"
        android:textColor="?attr/colorOnSecondary"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/amount_text_field"
        tools:text="Result" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/result_text"
        app:layout_constraintStart_toStartOf="@+id/result_text"
        app:layout_constraintTop_toTopOf="@+id/result_text" />

    <Button
        android:id="@+id/convert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="?attr/colorOnPrimarySurface"
        android:text="@string/convert"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/from_currency"
        app:layout_constraintStart_toStartOf="@+id/from_currency" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/to_currency"
        app:layout_constraintStart_toStartOf="@+id/to_currency" />

    <TextView
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="?attr/colorOnSecondary"
        android:text="@string/currency_converter"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>